--- a/Reptiles/Reptiles/requirements.txt
+++ b/Reptiles/Reptiles/requirements.txt
@@ -29,6 +29,7 @@ priority=1.3.0=pypi_0
 protego=0.1.16=pypi_0
 pycparser=2.20=pypi_0
 pydispatcher=2.0.5=pypi_0
+pymongo=3.12.1=pypi_0
 pyopenssl=21.0.0=pypi_0
 python=3.8.12=h6244533_0
 queuelib=1.6.2=pypi_0
@@ -52,4 +53,3 @@ wheel=0.37.0=pyhd3eb1b0_1
 wincertstore=0.2=py38haa95532_2
 wsproto=1.0.0=pypi_0
 zope-interface=5.4.0=pypi_0
-pymongo=3.12.1
