--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,59 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-async-generator=1.10=pypi_0
-attrs=21.2.0=pypi_0
-automat=20.2.0=pypi_0
-ca-certificates=2021.10.26=haa95532_2
-certifi=2021.10.8=py38haa95532_0
-cffi=1.15.0=pypi_0
-constantly=15.1.0=pypi_0
-cryptography=35.0.0=pypi_0
-cssselect=1.1.0=pypi_0
-fake-useragent=0.1.11=pypi_0
-h11=0.12.0=pypi_0
-h2=3.2.0=pypi_0
-hpack=3.0.0=pypi_0
-hyperframe=5.2.0=pypi_0
-hyperlink=21.0.0=pypi_0
-incremental=21.3.0=pypi_0
-itemadapter=0.4.0=pypi_0
-itemloaders=1.0.4=pypi_0
-jmespath=0.10.0=pypi_0
-lxml=4.6.3=pypi_0
-openssl=1.1.1l=h2bbff1b_0
-outcome=1.1.0=pypi_0
-parsel=1.6.0=pypi_0
-pip=21.0.1=py38haa95532_0
-priority=1.3.0=pypi_0
-protego=0.1.16=pypi_0
-pycparser=2.20=pypi_0
-pydispatcher=2.0.5=pypi_0
-pymongo=3.12.1=pypi_0
-pyopenssl=21.0.0=pypi_0
-python=3.8.12=h6244533_0
-queuelib=1.6.2=pypi_0
-scrapy=2.4.1=pypi_0
-scrapy-proxies=0.4=pypi_0
-selenium=4.0.0=pypi_0
-service-identity=21.1.0=pypi_0
-setuptools=58.0.4=py38haa95532_0
-sniffio=1.2.0=pypi_0
-sortedcontainers=2.4.0=pypi_0
-sqlite=3.36.0=h2bbff1b_0
-trio=0.19.0=pypi_0
-trio-websocket=0.9.2=pypi_0
-twisted=21.7.0=pypi_0
-twisted-iocpsupport=1.0.2=pypi_0
-typing-extensions=3.10.0.2=pypi_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-w3lib=1.22.0=pypi_0
-wheel=0.37.0=pyhd3eb1b0_1
-wincertstore=0.2=py38haa95532_2
-wsproto=1.0.0=pypi_0
-zope-interface=5.4.0=pypi_0
+async-generator==1.10
+attrs==21.2.0
+Automat==20.2.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+constantly==15.1.0
+cryptography==35.0.0
+cssselect==1.1.0
+Deprecated==1.2.13
+elasticsearch==7.15.2
+fake-useragent==0.1.11
+flake8==4.0.1
+h11==0.12.0
+h2==3.2.0
+hpack==3.0.0
+hyperframe==5.2.0
+hyperlink==21.0.0
+idna==3.3
+incremental==21.3.0
+itemadapter==0.4.0
+itemloaders==1.0.4
+jmespath==0.10.0
+lxml==4.6.3
+mccabe==0.6.1
+ndjson==0.3.1
+outcome==1.1.0
+parsel==1.6.0
+priority==1.3.0
+Protego==0.1.16
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
+pycparser==2.20
+PyDispatcher==2.0.5
+pyflakes==2.4.0
+pymongo==3.12.1
+pyOpenSSL==21.0.0
+queuelib==1.6.2
+redis==4.0.2
+requests==2.26.0
+Scrapy==2.4.1
+scrapy-proxies==0.4
+scrapy-redis==0.7.1
+selenium==4.0.0
+service-identity==21.1.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+trio==0.19.0
+trio-websocket==0.9.2
+Twisted==21.7.0
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+w3lib==1.22.0
+wincertstore==0.2
+wrapt==1.13.3
+wsproto==1.0.0
+zope.interface==5.4.0
